# choppy

./: .gitignore
modules/app/: CMakeLists.txt  TODO.txt  app.cppm  app_base.cpp  app_base.h  audio.cppm  chunkgen.cppm  chunkmesh.cppm  chunksman.cppm  client.cppm  cube.cppm  ecs.cppm  frustum.cppm  globals.cppm  grid.cppm  messages.cppm  obj.cpp  physics.cppm  player.cppm  resources.cppm  serializer.cppm  server.cppm  shaders.cppm  stb.cpp  systems.cppm  utils.cppm  world.cppm
modules/encoder/: CMakeLists.txt  audio_encoder.cpp  audio_encoder.h  video_encoder.cpp  video_encoder.h
modules/mylib/: CMakeLists.txt  Cargo.toml
modules/mylib/.cargo/: config.toml
modules/mylib/src/: lib.rs
modules/platform/: CMakeLists.txt  android.cppm  globals.cppm  linux.cppm  platform.cppm  windows.cppm
modules/rtmp/: CMakeLists.txt  amf.cpp  amf.h  rtmp.cpp  rtmp.h
modules/shaders/: CMakeLists.txt  hlsl_common.h  hlsl_types.h  shaders.cppm
modules/shaders/raymarch/: CMakeLists.txt  raymarch.cppm  raymarch.hlsl
modules/shaders/solid-color/: CMakeLists.txt  solid-color.cppm  solid-color.h  solid-color.hlsl
modules/shaders/solid-flat/: CMakeLists.txt  solid-flat.cppm  solid-flat.h  solid-flat.hlsl
modules/shaders/textured/: CMakeLists.txt  textured.cppm  textured.h  textured.hlsl
modules/std/: CMakeLists.txt  std.cppm
modules/vk/: CMakeLists.txt  buffer.cppm  shader.cppm  texture.cppm  utils.cppm  vk.cppm  vma.cpp
modules/xr/: CMakeLists.txt  utils.cppm  xr.cppm
projects/android/: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  local.properties  run.ps1  vcpkg.json
projects/android/java/com/omixlab/choppyengine/: MainActivity.kt
projects/android/java/com/omixlab/cubey/: MainActivity.kt
projects/android/src/: android_main.cpp
projects/linux/: .gitignore  CMakeLists.txt  make-package.sh
projects/linux/src/: linux_main.cpp
projects/windows/: .gitignore  CMakeLists.txt
projects/windows/src/: win_main.cpp
