include(FetchContent)

FetchContent_Declare(glm
    GIT_REPOSITORY https://github.com/g-truc/glm.git
    GIT_TAG 0af55ccecd98d4e5a8d1fad7de25ba429d60e863) # 1.0.1
FetchContent_Declare(perlin
    GIT_REPOSITORY https://github.com/Reputeless/PerlinNoise.git
    GIT_TAG 39ca74069057407a04c46e2ec06baf57c6fc4b3f) # v3.0.0
FetchContent_Declare(stb
    GIT_REPOSITORY https://github.com/nothings/stb.git
    GIT_TAG fede005abaf93d9d7f3a679d1999b2db341b360f) # Sep 7, 2025
FetchContent_Declare(miniaudio
    GIT_REPOSITORY https://github.com/mackron/miniaudio.git
    GIT_TAG f40cf03f80cdb7e741d43e53b7e706e8c1394bcf) # 0.11.23
FetchContent_Declare(tracy
    GIT_REPOSITORY https://github.com/wolfpld/tracy.git
    GIT_TAG c556831ddc6fe26d2fce01c14c97205a9dad46d5) # v0.12.2
FetchContent_Declare(enet
    GIT_REPOSITORY https://github.com/zpl-c/enet.git
    GIT_TAG 8647b6eaea881c86471ae29f732620d299fc20d7) # v2.6.5
FetchContent_Declare(datachannel
    GIT_REPOSITORY https://github.com/paullouisageneau/libdatachannel.git
    GIT_TAG 9e6a13abbb6846c003d817d0387b6706466e2b03) # v0.23.2
set(NO_EXAMPLES 1)
set(NO_TESTS 1)
FetchContent_Declare(jolt
    GIT_REPOSITORY https://github.com/jrouwe/JoltPhysics.git
    GIT_TAG 036ea7b1d717b3e713ac9d8cbd47118fb9cd5d60) # v5.4.0

FetchContent_MakeAvailable(perlin glm stb tracy jolt miniaudio enet datachannel)

set(JOLT_PHYSICS_ROOT ${jolt_SOURCE_DIR}/Jolt)
set(JOLT_PHYSICS_SRC_FILES
    ${JOLT_PHYSICS_ROOT}/AABBTree/AABBTreeBuilder.cpp
    ${JOLT_PHYSICS_ROOT}/AABBTree/AABBTreeBuilder.h
    ${JOLT_PHYSICS_ROOT}/AABBTree/AABBTreeToBuffer.h
    ${JOLT_PHYSICS_ROOT}/AABBTree/NodeCodec/NodeCodecQuadTreeHalfFloat.h
    ${JOLT_PHYSICS_ROOT}/AABBTree/TriangleCodec/TriangleCodecIndexed8BitPackSOA4Flags.h
    ${JOLT_PHYSICS_ROOT}/ConfigurationString.h
    ${JOLT_PHYSICS_ROOT}/Core/ARMNeon.h
    ${JOLT_PHYSICS_ROOT}/Core/Array.h
    ${JOLT_PHYSICS_ROOT}/Core/Atomics.h
    ${JOLT_PHYSICS_ROOT}/Core/BinaryHeap.h
    ${JOLT_PHYSICS_ROOT}/Core/ByteBuffer.h
    ${JOLT_PHYSICS_ROOT}/Core/Color.cpp
    ${JOLT_PHYSICS_ROOT}/Core/Color.h
    ${JOLT_PHYSICS_ROOT}/Core/Core.h
    ${JOLT_PHYSICS_ROOT}/Core/Factory.cpp
    ${JOLT_PHYSICS_ROOT}/Core/Factory.h
    ${JOLT_PHYSICS_ROOT}/Core/FixedSizeFreeList.h
    ${JOLT_PHYSICS_ROOT}/Core/FixedSizeFreeList.inl
    ${JOLT_PHYSICS_ROOT}/Core/FPControlWord.h
    ${JOLT_PHYSICS_ROOT}/Core/FPException.h
    ${JOLT_PHYSICS_ROOT}/Core/FPFlushDenormals.h
    ${JOLT_PHYSICS_ROOT}/Core/HashCombine.h
    ${JOLT_PHYSICS_ROOT}/Core/HashTable.h
    ${JOLT_PHYSICS_ROOT}/Core/InsertionSort.h
    ${JOLT_PHYSICS_ROOT}/Core/IssueReporting.cpp
    ${JOLT_PHYSICS_ROOT}/Core/IssueReporting.h
    ${JOLT_PHYSICS_ROOT}/Core/JobSystem.h
    ${JOLT_PHYSICS_ROOT}/Core/JobSystem.inl
    ${JOLT_PHYSICS_ROOT}/Core/JobSystemSingleThreaded.cpp
    ${JOLT_PHYSICS_ROOT}/Core/JobSystemSingleThreaded.h
    ${JOLT_PHYSICS_ROOT}/Core/JobSystemThreadPool.cpp
    ${JOLT_PHYSICS_ROOT}/Core/JobSystemThreadPool.h
    ${JOLT_PHYSICS_ROOT}/Core/JobSystemWithBarrier.cpp
    ${JOLT_PHYSICS_ROOT}/Core/JobSystemWithBarrier.h
    ${JOLT_PHYSICS_ROOT}/Core/LinearCurve.cpp
    ${JOLT_PHYSICS_ROOT}/Core/LinearCurve.h
    ${JOLT_PHYSICS_ROOT}/Core/LockFreeHashMap.h
    ${JOLT_PHYSICS_ROOT}/Core/LockFreeHashMap.inl
    ${JOLT_PHYSICS_ROOT}/Core/Memory.cpp
    ${JOLT_PHYSICS_ROOT}/Core/Memory.h
    ${JOLT_PHYSICS_ROOT}/Core/Mutex.h
    ${JOLT_PHYSICS_ROOT}/Core/MutexArray.h
    ${JOLT_PHYSICS_ROOT}/Core/NonCopyable.h
    ${JOLT_PHYSICS_ROOT}/Core/Profiler.cpp
    ${JOLT_PHYSICS_ROOT}/Core/Profiler.h
    ${JOLT_PHYSICS_ROOT}/Core/Profiler.inl
    ${JOLT_PHYSICS_ROOT}/Core/QuickSort.h
    ${JOLT_PHYSICS_ROOT}/Core/Reference.h
    ${JOLT_PHYSICS_ROOT}/Core/Result.h
    ${JOLT_PHYSICS_ROOT}/Core/RTTI.cpp
    ${JOLT_PHYSICS_ROOT}/Core/RTTI.h
    ${JOLT_PHYSICS_ROOT}/Core/ScopeExit.h
    ${JOLT_PHYSICS_ROOT}/Core/Semaphore.cpp
    ${JOLT_PHYSICS_ROOT}/Core/Semaphore.h
    ${JOLT_PHYSICS_ROOT}/Core/StaticArray.h
    ${JOLT_PHYSICS_ROOT}/Core/STLAlignedAllocator.h
    ${JOLT_PHYSICS_ROOT}/Core/STLAllocator.h
    ${JOLT_PHYSICS_ROOT}/Core/STLLocalAllocator.h
    ${JOLT_PHYSICS_ROOT}/Core/STLTempAllocator.h
    ${JOLT_PHYSICS_ROOT}/Core/StreamIn.h
    ${JOLT_PHYSICS_ROOT}/Core/StreamOut.h
    ${JOLT_PHYSICS_ROOT}/Core/StreamUtils.h
    ${JOLT_PHYSICS_ROOT}/Core/StreamWrapper.h
    ${JOLT_PHYSICS_ROOT}/Core/StridedPtr.h
    ${JOLT_PHYSICS_ROOT}/Core/StringTools.cpp
    ${JOLT_PHYSICS_ROOT}/Core/StringTools.h
    ${JOLT_PHYSICS_ROOT}/Core/TempAllocator.h
    ${JOLT_PHYSICS_ROOT}/Core/TickCounter.cpp
    ${JOLT_PHYSICS_ROOT}/Core/TickCounter.h
    ${JOLT_PHYSICS_ROOT}/Core/UnorderedMap.h
    ${JOLT_PHYSICS_ROOT}/Core/UnorderedSet.h
    ${JOLT_PHYSICS_ROOT}/Geometry/AABox.h
    ${JOLT_PHYSICS_ROOT}/Geometry/AABox4.h
    ${JOLT_PHYSICS_ROOT}/Geometry/ClipPoly.h
    ${JOLT_PHYSICS_ROOT}/Geometry/ClosestPoint.h
    ${JOLT_PHYSICS_ROOT}/Geometry/ConvexHullBuilder.cpp
    ${JOLT_PHYSICS_ROOT}/Geometry/ConvexHullBuilder.h
    ${JOLT_PHYSICS_ROOT}/Geometry/ConvexHullBuilder2D.cpp
    ${JOLT_PHYSICS_ROOT}/Geometry/ConvexHullBuilder2D.h
    ${JOLT_PHYSICS_ROOT}/Geometry/ConvexSupport.h
    ${JOLT_PHYSICS_ROOT}/Geometry/Ellipse.h
    ${JOLT_PHYSICS_ROOT}/Geometry/EPAConvexHullBuilder.h
    ${JOLT_PHYSICS_ROOT}/Geometry/EPAPenetrationDepth.h
    ${JOLT_PHYSICS_ROOT}/Geometry/GJKClosestPoint.h
    ${JOLT_PHYSICS_ROOT}/Geometry/IndexedTriangle.h
    ${JOLT_PHYSICS_ROOT}/Geometry/Indexify.cpp
    ${JOLT_PHYSICS_ROOT}/Geometry/Indexify.h
    ${JOLT_PHYSICS_ROOT}/Geometry/MortonCode.h
    ${JOLT_PHYSICS_ROOT}/Geometry/OrientedBox.cpp
    ${JOLT_PHYSICS_ROOT}/Geometry/OrientedBox.h
    ${JOLT_PHYSICS_ROOT}/Geometry/Plane.h
    ${JOLT_PHYSICS_ROOT}/Geometry/RayAABox.h
    ${JOLT_PHYSICS_ROOT}/Geometry/RayCapsule.h
    ${JOLT_PHYSICS_ROOT}/Geometry/RayCylinder.h
    ${JOLT_PHYSICS_ROOT}/Geometry/RaySphere.h
    ${JOLT_PHYSICS_ROOT}/Geometry/RayTriangle.h
    ${JOLT_PHYSICS_ROOT}/Geometry/Sphere.h
    ${JOLT_PHYSICS_ROOT}/Geometry/Triangle.h
    ${JOLT_PHYSICS_ROOT}/Jolt.cmake
    ${JOLT_PHYSICS_ROOT}/Jolt.h
    ${JOLT_PHYSICS_ROOT}/Math/BVec16.h
    ${JOLT_PHYSICS_ROOT}/Math/BVec16.inl
    ${JOLT_PHYSICS_ROOT}/Math/DMat44.h
    ${JOLT_PHYSICS_ROOT}/Math/DMat44.inl
    ${JOLT_PHYSICS_ROOT}/Math/Double3.h
    ${JOLT_PHYSICS_ROOT}/Math/DVec3.h
    ${JOLT_PHYSICS_ROOT}/Math/DVec3.inl
    ${JOLT_PHYSICS_ROOT}/Math/DynMatrix.h
    ${JOLT_PHYSICS_ROOT}/Math/EigenValueSymmetric.h
    ${JOLT_PHYSICS_ROOT}/Math/FindRoot.h
    ${JOLT_PHYSICS_ROOT}/Math/Float2.h
    ${JOLT_PHYSICS_ROOT}/Math/Float3.h
    ${JOLT_PHYSICS_ROOT}/Math/Float4.h
    ${JOLT_PHYSICS_ROOT}/Math/GaussianElimination.h
    ${JOLT_PHYSICS_ROOT}/Math/HalfFloat.h
    ${JOLT_PHYSICS_ROOT}/Math/Mat44.h
    ${JOLT_PHYSICS_ROOT}/Math/Mat44.inl
    ${JOLT_PHYSICS_ROOT}/Math/Math.h
    ${JOLT_PHYSICS_ROOT}/Math/MathTypes.h
    ${JOLT_PHYSICS_ROOT}/Math/Matrix.h
    ${JOLT_PHYSICS_ROOT}/Math/Quat.h
    ${JOLT_PHYSICS_ROOT}/Math/Quat.inl
    ${JOLT_PHYSICS_ROOT}/Math/Real.h
    ${JOLT_PHYSICS_ROOT}/Math/Swizzle.h
    ${JOLT_PHYSICS_ROOT}/Math/Trigonometry.h
    ${JOLT_PHYSICS_ROOT}/Math/UVec4.h
    ${JOLT_PHYSICS_ROOT}/Math/UVec4.inl
    ${JOLT_PHYSICS_ROOT}/Math/Vec3.cpp
    ${JOLT_PHYSICS_ROOT}/Math/Vec3.h
    ${JOLT_PHYSICS_ROOT}/Math/Vec3.inl
    ${JOLT_PHYSICS_ROOT}/Math/Vec4.h
    ${JOLT_PHYSICS_ROOT}/Math/Vec4.inl
    ${JOLT_PHYSICS_ROOT}/Math/Vector.h
    ${JOLT_PHYSICS_ROOT}/ObjectStream/ObjectStream.h
    ${JOLT_PHYSICS_ROOT}/ObjectStream/SerializableAttribute.h
    ${JOLT_PHYSICS_ROOT}/ObjectStream/SerializableAttributeEnum.h
    ${JOLT_PHYSICS_ROOT}/ObjectStream/SerializableAttributeTyped.h
    ${JOLT_PHYSICS_ROOT}/ObjectStream/SerializableObject.cpp
    ${JOLT_PHYSICS_ROOT}/ObjectStream/SerializableObject.h
    ${JOLT_PHYSICS_ROOT}/ObjectStream/TypeDeclarations.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/AllowedDOFs.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/Body.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Body/Body.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/Body.inl
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyAccess.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyActivationListener.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyCreationSettings.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyCreationSettings.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyFilter.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyID.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyInterface.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyInterface.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyLock.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyLockInterface.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyLockMulti.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyManager.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyManager.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyPair.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/BodyType.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/MassProperties.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Body/MassProperties.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/MotionProperties.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Body/MotionProperties.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/MotionProperties.inl
    ${JOLT_PHYSICS_ROOT}/Physics/Body/MotionQuality.h
    ${JOLT_PHYSICS_ROOT}/Physics/Body/MotionType.h
    ${JOLT_PHYSICS_ROOT}/Physics/Character/Character.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Character/Character.h
    ${JOLT_PHYSICS_ROOT}/Physics/Character/CharacterBase.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Character/CharacterBase.h
    ${JOLT_PHYSICS_ROOT}/Physics/Character/CharacterID.h
    ${JOLT_PHYSICS_ROOT}/Physics/Character/CharacterVirtual.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Character/CharacterVirtual.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/AABoxCast.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ActiveEdgeMode.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ActiveEdges.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BackFaceMode.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhase.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhase.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseBruteForce.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseBruteForce.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseLayer.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseLayerInterfaceMask.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseLayerInterfaceTable.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseQuadTree.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseQuadTree.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/BroadPhaseQuery.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/ObjectVsBroadPhaseLayerFilterMask.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/ObjectVsBroadPhaseLayerFilterTable.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/QuadTree.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/BroadPhase/QuadTree.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CastConvexVsTriangles.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CastConvexVsTriangles.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CastResult.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CastSphereVsTriangles.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CastSphereVsTriangles.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollectFacesMode.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideConvexVsTriangles.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideConvexVsTriangles.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollidePointResult.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideShapeVsShapePerLeaf.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideSoftBodyVertexIterator.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideSoftBodyVerticesVsTriangles.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideSphereVsTriangles.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollideSphereVsTriangles.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollisionCollector.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollisionCollectorImpl.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollisionDispatch.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollisionDispatch.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollisionGroup.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/CollisionGroup.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ContactListener.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/EstimateCollisionResponse.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/EstimateCollisionResponse.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/GroupFilter.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/GroupFilter.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/GroupFilterTable.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/GroupFilterTable.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/InternalEdgeRemovingCollector.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ManifoldBetweenTwoFaces.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ManifoldBetweenTwoFaces.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/NarrowPhaseQuery.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/NarrowPhaseQuery.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/NarrowPhaseStats.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/NarrowPhaseStats.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ObjectLayer.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ObjectLayerPairFilterMask.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ObjectLayerPairFilterTable.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/PhysicsMaterial.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/PhysicsMaterial.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/PhysicsMaterialSimple.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/PhysicsMaterialSimple.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/RayCast.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/BoxShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/BoxShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/CapsuleShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/CapsuleShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/CompoundShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/CompoundShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/CompoundShapeVisitors.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/ConvexHullShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/ConvexHullShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/ConvexShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/ConvexShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/CylinderShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/CylinderShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/DecoratedShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/DecoratedShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/EmptyShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/EmptyShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/GetTrianglesContext.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/HeightFieldShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/HeightFieldShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/MeshShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/MeshShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/MutableCompoundShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/MutableCompoundShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/OffsetCenterOfMassShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/OffsetCenterOfMassShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/PlaneShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/PlaneShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/PolyhedronSubmergedVolumeCalculator.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/RotatedTranslatedShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/RotatedTranslatedShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/ScaledShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/ScaledShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/ScaleHelpers.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/Shape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/Shape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/SphereShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/SphereShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/StaticCompoundShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/StaticCompoundShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/SubShapeID.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/SubShapeIDPair.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/TaperedCapsuleShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/TaperedCapsuleShape.gliffy
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/TaperedCapsuleShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/TaperedCylinderShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/TaperedCylinderShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/TriangleShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/Shape/TriangleShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ShapeCast.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/ShapeFilter.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/SimShapeFilter.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/SimShapeFilterWrapper.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/SortReverseAndStore.h
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/TransformedShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Collision/TransformedShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/CalculateSolverSteps.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConeConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConeConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/Constraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/Constraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintManager.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintManager.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/AngleConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/AxisConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/DualAxisConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/GearConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/HingeRotationConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/IndependentAxisConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/PointConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/RackAndPinionConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/RotationEulerConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/RotationQuatConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/SpringPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ConstraintPart/SwingTwistConstraintPart.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ContactConstraintManager.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/ContactConstraintManager.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/DistanceConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/DistanceConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/FixedConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/FixedConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/GearConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/GearConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/HingeConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/HingeConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/MotorSettings.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/MotorSettings.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PathConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PathConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PathConstraintPath.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PathConstraintPath.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PathConstraintPathHermite.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PathConstraintPathHermite.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PointConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PointConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PulleyConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/PulleyConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/RackAndPinionConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/RackAndPinionConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SixDOFConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SixDOFConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SliderConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SliderConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SpringSettings.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SpringSettings.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SwingTwistConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/SwingTwistConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/TwoBodyConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Constraints/TwoBodyConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/DeterminismLog.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/DeterminismLog.h
    ${JOLT_PHYSICS_ROOT}/Physics/EActivation.h
    ${JOLT_PHYSICS_ROOT}/Physics/EPhysicsUpdateError.h
    ${JOLT_PHYSICS_ROOT}/Physics/IslandBuilder.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/IslandBuilder.h
    ${JOLT_PHYSICS_ROOT}/Physics/LargeIslandSplitter.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/LargeIslandSplitter.h
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsLock.h
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsScene.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsScene.h
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsSettings.h
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsStepListener.h
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsSystem.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsSystem.h
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsUpdateContext.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/PhysicsUpdateContext.h
    ${JOLT_PHYSICS_ROOT}/Physics/Ragdoll/Ragdoll.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Ragdoll/Ragdoll.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyContactListener.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyCreationSettings.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyCreationSettings.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyManifold.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyMotionProperties.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyMotionProperties.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyShape.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyShape.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodySharedSettings.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodySharedSettings.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyUpdateContext.h
    ${JOLT_PHYSICS_ROOT}/Physics/SoftBody/SoftBodyVertex.h
    ${JOLT_PHYSICS_ROOT}/Physics/StateRecorder.h
    ${JOLT_PHYSICS_ROOT}/Physics/StateRecorderImpl.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/StateRecorderImpl.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/MotorcycleController.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/MotorcycleController.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/TrackedVehicleController.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/TrackedVehicleController.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleAntiRollBar.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleAntiRollBar.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleCollisionTester.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleCollisionTester.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleConstraint.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleConstraint.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleController.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleController.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleDifferential.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleDifferential.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleEngine.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleEngine.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleTrack.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleTrack.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleTransmission.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/VehicleTransmission.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/Wheel.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/Wheel.h
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/WheeledVehicleController.cpp
    ${JOLT_PHYSICS_ROOT}/Physics/Vehicle/WheeledVehicleController.h
    ${JOLT_PHYSICS_ROOT}/RegisterTypes.cpp
    ${JOLT_PHYSICS_ROOT}/RegisterTypes.h
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRenderer.cpp
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRenderer.h
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRendererPlayback.cpp
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRendererPlayback.h
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRendererRecorder.cpp
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRendererRecorder.h
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRendererSimple.cpp
    ${JOLT_PHYSICS_ROOT}/Renderer/DebugRendererSimple.h
    ${JOLT_PHYSICS_ROOT}/Skeleton/SkeletalAnimation.cpp
    ${JOLT_PHYSICS_ROOT}/Skeleton/SkeletalAnimation.h
    ${JOLT_PHYSICS_ROOT}/Skeleton/Skeleton.cpp
    ${JOLT_PHYSICS_ROOT}/Skeleton/Skeleton.h
    ${JOLT_PHYSICS_ROOT}/Skeleton/SkeletonMapper.cpp
    ${JOLT_PHYSICS_ROOT}/Skeleton/SkeletonMapper.h
    ${JOLT_PHYSICS_ROOT}/Skeleton/SkeletonPose.cpp
    ${JOLT_PHYSICS_ROOT}/Skeleton/SkeletonPose.h
    ${JOLT_PHYSICS_ROOT}/TriangleSplitter/TriangleSplitter.cpp
    ${JOLT_PHYSICS_ROOT}/TriangleSplitter/TriangleSplitter.h
    ${JOLT_PHYSICS_ROOT}/TriangleSplitter/TriangleSplitterBinning.cpp
    ${JOLT_PHYSICS_ROOT}/TriangleSplitter/TriangleSplitterBinning.h
    ${JOLT_PHYSICS_ROOT}/TriangleSplitter/TriangleSplitterMean.cpp
    ${JOLT_PHYSICS_ROOT}/TriangleSplitter/TriangleSplitterMean.h
)
add_library(jolt ${JOLT_PHYSICS_SRC_FILES})
target_compile_definitions(jolt PUBLIC JPH_DEBUG_RENDERER)
target_include_directories(jolt PUBLIC ${jolt_SOURCE_DIR})

add_library(perlin INTERFACE)
target_include_directories(perlin INTERFACE ${perlin_SOURCE_DIR})

add_library(stb INTERFACE)
target_include_directories(stb INTERFACE ${stb_SOURCE_DIR})

add_library(glmcppm OBJECT)
target_link_libraries(glmcppm PUBLIC glm::glm)
target_compile_definitions(glmcppm PUBLIC
    GLM_ENABLE_EXPERIMENTAL
)
target_sources(glmcppm PUBLIC
    FILE_SET CXX_MODULES
    BASE_DIRS ${glm_SOURCE_DIR}/glm
    FILES ${glm_SOURCE_DIR}/glm/glm.cppm)

if (WIN32)
    add_custom_target(copy_assets ALL
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_CURRENT_SOURCE_DIR}/assets
        ${CMAKE_BINARY_DIR}/assets)
elseif(ANDROID)
    add_custom_target(copy_assets ALL
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_CURRENT_SOURCE_DIR}/assets
        ${CMAKE_SOURCE_DIR}/assets_gen)
else()
    add_custom_target(copy_assets ALL
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_CURRENT_SOURCE_DIR}/assets
        ${CMAKE_BINARY_DIR}/assets)
endif()

add_library(app OBJECT stb.cpp)
target_link_libraries(app PUBLIC
    platform xr vk glmcppm shaders perlin
    jolt miniaudio enet_static datachannel)
add_dependencies(app copy_assets)
target_sources(app PUBLIC
    FILE_SET CXX_MODULES BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} FILES
        app.cppm
        utils.cppm
        chunkgen.cppm
        chunkmesh.cppm
        chunksman.cppm
        frustum.cppm
        player.cppm
        ecs.cppm
        audio.cppm
        server.cppm
        client.cppm
        resources.cppm
        messages.cppm
        world.cppm
        systems.cppm
        physics.cppm
        globals.cppm
        shaders.cppm
        serializer.cppm
)
